--- a/myblog/work.html
+++ b/myblog/work.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="./page-icon.png">
     <title>Mae's Work</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -39,7 +40,7 @@
                 </div>
             </div>
             <div class="work-item">
-                <img src="./work1.png" alt="">
+                <img src="./work2.png" alt="">
                 <div class="overlay">
                     <small>ecommerce website design</small>
                 </div>
@@ -50,6 +51,11 @@
                     <small>ecommerce website design</small>
                 </div>
             </div>
+        </div>
+
+        <div class="popup-img">
+            <span>&times;</span>
+            <img src="./work1.png" alt="">
         </div>
     </section>
 
