--- a/myblog/blogs.html
+++ b/myblog/blogs.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="./page-icon.png">
     <title>Mae's Blogs</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -37,16 +38,7 @@
                 <div class="blog-title"><p>Hello</p></div>
                 <div class="blog-desc"><p>This is the first blog that I've written here ...</p></div>
             </div>
-            <div class="blog-item">
-                <div class="blog-date"><p>09/07/2023</p></div>
-                <div class="blog-title"><p>Hello</p></div>
-                <div class="blog-desc"><p>this is the first blog that I've written here ...</p></div>
-            </div>
-            <div class="blog-item">
-                <div class="blog-date"><p>09/07/2023</p></div>
-                <div class="blog-title"><p>Hello</p></div>
-                <div class="blog-desc"><p>this is the first blog that I've written here ...</p></div>
-            </div>
+
         </div>
     </section>
 
