--- a/myblog/blogs.html
+++ b/myblog/blogs.html
@@ -33,12 +33,11 @@
         </div>
         <span class="seperator"></span>
         <div class="blogs">
-            <div class="blog-item">
+            <div class="blog-item" onclick="redirectToBlog()">
                 <div class="blog-date"><p>09/07/2023</p></div>
                 <div class="blog-title"><p>Hello</p></div>
                 <div class="blog-desc"><p>This is the first blog that I've written here ...</p></div>
             </div>
-
         </div>
     </section>
 
